@@ -66,20 +66,6 @@ name|randomizedtesting
 operator|.
 name|annotations
 operator|.
-name|Name
-import|;
-end_import
-
-begin_import
-import|import
-name|com
-operator|.
-name|carrotsearch
-operator|.
-name|randomizedtesting
-operator|.
-name|annotations
-operator|.
 name|ParametersFactory
 import|;
 end_import
@@ -326,6 +312,11 @@ name|StrategyTestCase
 block|{
 annotation|@
 name|ParametersFactory
+argument_list|(
+name|argumentFormatting
+operator|=
+literal|"strategy=%s"
+argument_list|)
 DECL|method|parameters
 specifier|public
 specifier|static
@@ -390,11 +381,12 @@ operator|new
 name|Object
 index|[]
 block|{
-operator|new
-name|Param
-argument_list|(
 name|strategy
-argument_list|)
+operator|.
+name|getFieldName
+argument_list|()
+block|,
+name|strategy
 block|}
 argument_list|)
 expr_stmt|;
@@ -426,11 +418,12 @@ operator|new
 name|Object
 index|[]
 block|{
-operator|new
-name|Param
-argument_list|(
 name|strategy
-argument_list|)
+operator|.
+name|getFieldName
+argument_list|()
+block|,
+name|strategy
 block|}
 argument_list|)
 expr_stmt|;
@@ -462,11 +455,12 @@ operator|new
 name|Object
 index|[]
 block|{
-operator|new
-name|Param
-argument_list|(
 name|strategy
-argument_list|)
+operator|.
+name|getFieldName
+argument_list|()
+block|,
+name|strategy
 block|}
 argument_list|)
 expr_stmt|;
@@ -488,11 +482,12 @@ operator|new
 name|Object
 index|[]
 block|{
-operator|new
-name|Param
-argument_list|(
 name|strategy
-argument_list|)
+operator|.
+name|getFieldName
+argument_list|()
+block|,
+name|strategy
 block|}
 argument_list|)
 expr_stmt|;
@@ -514,11 +509,12 @@ operator|new
 name|Object
 index|[]
 block|{
-operator|new
-name|Param
-argument_list|(
 name|strategy
-argument_list|)
+operator|.
+name|getFieldName
+argument_list|()
+block|,
+name|strategy
 block|}
 argument_list|)
 expr_stmt|;
@@ -540,11 +536,12 @@ operator|new
 name|Object
 index|[]
 block|{
-operator|new
-name|Param
-argument_list|(
 name|strategy
-argument_list|)
+operator|.
+name|getFieldName
+argument_list|()
+block|,
+name|strategy
 block|}
 argument_list|)
 expr_stmt|;
@@ -552,67 +549,17 @@ return|return
 name|ctorArgs
 return|;
 block|}
-comment|// this is a hack for clover!
-DECL|class|Param
-specifier|static
-class|class
-name|Param
-block|{
-DECL|field|strategy
-name|SpatialStrategy
-name|strategy
-decl_stmt|;
-DECL|method|Param
-name|Param
-parameter_list|(
-name|SpatialStrategy
-name|strategy
-parameter_list|)
-block|{
-name|this
-operator|.
-name|strategy
-operator|=
-name|strategy
-expr_stmt|;
-block|}
-annotation|@
-name|Override
-DECL|method|toString
-specifier|public
-name|String
-name|toString
-parameter_list|()
-block|{
-return|return
-name|strategy
-operator|.
-name|getFieldName
-argument_list|()
-return|;
-block|}
-block|}
-comment|//  private String fieldName;
 DECL|method|DistanceStrategyTest
 specifier|public
 name|DistanceStrategyTest
 parameter_list|(
-annotation|@
-name|Name
-argument_list|(
-literal|"strategy"
-argument_list|)
-name|Param
-name|param
-parameter_list|)
-block|{
+name|String
+name|suiteName
+parameter_list|,
 name|SpatialStrategy
 name|strategy
-init|=
-name|param
-operator|.
-name|strategy
-decl_stmt|;
+parameter_list|)
+block|{
 name|this
 operator|.
 name|ctx
